Update LTI tool routes and feedback review logic

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -97,7 +97,7 @@
     </div>    
 
     <div class="score">
-      Score: {{ score }} / 100
+      Score: {{ score }} / {{ rubric_total_points }}
     </div>
 
     <div class="feedback-box">
