--- a/templates/prompt_preview.html
+++ b/templates/prompt_preview.html
@@ -1,10 +1,3 @@
-# Copyright (c) 2025 Jeremiah Baker
-# All rights reserved. This file is part of the Rubiqs Suite, developed by J. Baker Design.
-#
-# Unauthorized copying, distribution, modification, or use of this software is strictly prohibited
-# without prior written consent from J. Baker Design. For commercial licensing inquiries, visit:
-# https://jeremiahbakerdesign.com or contact support@jeremiahbakerdesign.com.
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,5 +71,10 @@
       </form>
     </div>
   </div>
+
+<footer style="text-align:center; margin-top: 40px;">
+  <p style="font-size: 0.75em; color: #555;">&copy; 2025 J. Baker Design</p>
+</footer>
 </body>
+
 </html>
