--- a/templates/test_grader.html
+++ b/templates/test_grader.html
@@ -138,6 +138,10 @@
         <pre>{{ gpt_feedback }}</pre>
       </div>
     {% endif %}
-  </div>
+  
+<div class="text-center text-sm text-gray-500 mt-12 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
+
 </body>
 </html>
