--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -153,5 +153,9 @@
       </tbody>
     </table>
   </div>
+
+<div class="text-center text-sm text-gray-500 mt-12 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
 </body>
 </html>
