--- a/templates/assignment_config.html
+++ b/templates/assignment_config.html
@@ -253,5 +253,9 @@
       </table>
     </div>
   </div>
+
+<div class="text-center text-sm text-gray-500 mt-12 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
 </body>
 </html>
