--- a/templates/launch.html
+++ b/templates/launch.html
@@ -260,5 +260,9 @@
       }
     </script>    
     
+
+<div class="text-center text-sm text-gray-500 mt-12 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
 </body>
 </html>
