--- a/templates/prompt_preview.html
+++ b/templates/prompt_preview.html
@@ -75,6 +75,10 @@
 <footer style="text-align:center; margin-top: 40px;">
   <p style="font-size: 0.75em; color: #555;">&copy; 2025 J. Baker Design</p>
 </footer>
+
+<div class="text-center text-sm text-gray-500 mt-12 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
 </body>
 
 </html>
