--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -157,5 +157,9 @@
 <div class="text-center text-sm text-gray-500 mt-12 mb-4">
   &copy; 2025 J. Baker Design
 </div>
+
+<div class="text-center text-sm text-gray-500 mt-8 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
 </body>
 </html>
