--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -110,7 +110,11 @@
   
 <div class="text-center text-sm text-gray-500 mt-12 mb-4">
   &copy; 2025 J. Baker Design
+
+<div class="text-center text-sm text-gray-500 mt-8 mb-4">
+  &copy; 2025 J. Baker Design
 </div>
+
 
 </body>
 </html>
