--- a/templates/prompt_preview.html
+++ b/templates/prompt_preview.html
@@ -79,6 +79,10 @@
 <div class="text-center text-sm text-gray-500 mt-12 mb-4">
   &copy; 2025 J. Baker Design
 </div>
+
+<div class="text-center text-sm text-gray-500 mt-8 mb-4">
+  &copy; 2025 J. Baker Design
+</div>
 </body>
 
 </html>
